# fragrance-analysis

./: .gitignore  01_cleaning.ipynb  LICENSE  README.md  beginnings.ipynb  main.py  pyproject.toml
notebooks/: 01_cleaning.ipynb  02_EDA.ipynb  03_limitations.ipynb
src/fragrance_analysis/: brands.py  concentration.py  ratings.py
tests/: test_brands.py  test_concentration.py  test_ratings.py
