[project]
name = "fragrance-analysis"
version = "0.1.0"
description = "Exploratory data analysis of ~59,000 Parfumo fragrances, examining rating distributions, popularity vs. quality, and the niche-vs-designer ratings gap."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.0,!=3.0.4",
    "pyarrow>=25.0.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fragrance_analysis"]
